A lot of potential fixes based on FindBugs on own experience