@@ -93,7 +93,7 @@ public class Session implements ISession {
 			final ClassLoader classLoader = Session.class.getClassLoader();
 			final SessionInvocationHandler invocationHandler = new SessionInvocationHandler(m_connectionService);
 			final IConnectionService connectionServiceProxy = (IConnectionService) Proxy.newProxyInstance(classLoader, new Class[] {
-				IConnectionService.class
+					IConnectionService.class
 			}, invocationHandler);
 			m_proxies.put(IConnectionService.class.getName(), connectionServiceProxy);
 		}
@@ -108,7 +108,7 @@ public class Session implements ISession {
 			final ClassLoader classLoader = Session.class.getClassLoader();
 			final SessionInvocationHandler invocationHandler = new SessionInvocationHandler(m_loginService);
 			final ILoginService loginServiceProxy = (ILoginService) Proxy.newProxyInstance(classLoader, new Class[] {
-				ILoginService.class
+					ILoginService.class
 			}, invocationHandler);
 			m_proxies.put(ILoginService.class.getName(), loginServiceProxy);
 		}
@@ -123,7 +123,7 @@ public class Session implements ISession {
 			final ClassLoader classLoader = Session.class.getClassLoader();
 			final SessionInvocationHandler invocationHandler = new SessionInvocationHandler(m_messageService);
 			final IMessageService messageServiceProxy = (IMessageService) Proxy.newProxyInstance(classLoader, new Class[] {
-				IMessageService.class
+					IMessageService.class
 			}, invocationHandler);
 			m_proxies.put(IMessageService.class.getName(), messageServiceProxy);
 		}
@@ -138,7 +138,7 @@ public class Session implements ISession {
 			final ClassLoader classLoader = Session.class.getClassLoader();
 			final SessionInvocationHandler invocationHandler = new SessionInvocationHandler(m_presenceService);
 			final IPresenceService presenceServiceProxy = (IPresenceService) Proxy.newProxyInstance(classLoader, new Class[] {
-				IPresenceService.class
+					IPresenceService.class
 			}, invocationHandler);
 			m_proxies.put(IPresenceService.class.getName(), presenceServiceProxy);
 		}
@@ -153,9 +153,9 @@ public class Session implements ISession {
 			final ClassLoader classLoader = Session.class.getClassLoader();
 			final SessionInvocationHandler invocationHandler = new SessionInvocationHandler(m_publicDirectoryService);
 			final IPublicDirectoryService publicDirectoryServiceProxy = (IPublicDirectoryService) Proxy
-			        .newProxyInstance(classLoader, new Class[] {
-				        IPublicDirectoryService.class
-			        }, invocationHandler);
+			.newProxyInstance(classLoader, new Class[] {
+					IPublicDirectoryService.class
+			}, invocationHandler);
 			m_proxies.put(IPublicDirectoryService.class.getName(), publicDirectoryServiceProxy);
 		}
 		return (IPublicDirectoryService) m_proxies.get(IPublicDirectoryService.class.getName());
@@ -169,7 +169,7 @@ public class Session implements ISession {
 			final ClassLoader classLoader = Session.class.getClassLoader();
 			final SessionInvocationHandler invocationHandler = new SessionInvocationHandler(m_contactListService);
 			final IContactListService contactListServiceProxy = (IContactListService) Proxy.newProxyInstance(classLoader, new Class[] {
-				IContactListService.class
+					IContactListService.class
 			}, invocationHandler);
 			m_proxies.put(IContactListService.class.getName(), contactListServiceProxy);
 		}
@@ -184,7 +184,7 @@ public class Session implements ISession {
 			final ClassLoader classLoader = Session.class.getClassLoader();
 			final SessionInvocationHandler invocationHandler = new SessionInvocationHandler(m_registrationService);
 			final IRegistrationService registrationServiceProxy = (IRegistrationService) Proxy.newProxyInstance(classLoader, new Class[] {
-				IRegistrationService.class
+					IRegistrationService.class
 			}, invocationHandler);
 			m_proxies.put(IRegistrationService.class.getName(), registrationServiceProxy);
 		}
@@ -290,7 +290,7 @@ public class Session implements ISession {
 		}
 
 		public void setLoginSeed(final int seed) {
-			m_sessionAttributes.put("seed", new Integer(seed));
+			m_sessionAttributes.put("seed", Integer.valueOf(seed));
 		}
 
 		public int getLoginSeed() {
